--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
   <!-- load ItemMirror.min.js and your scripts last -->
   <script src="scripts/ItemMirror.dev.js"></script>
+  <script src="scripts/Modal-Dialog/folderSelectDialog.js"></script>
   <script src="scripts/simpleDemo.js"></script>
   <script src="bower_components/jquery/jquery.js"></script>  
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="Modal-Dialog/folderSelectDialog.js"></script>
+  
 </head>
 
 
 <body>
   
-  <div class="modal fade">
+  <div class="modal fade" id="modalDialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <h4 class="modal-title">Modal itemMirror Folder Select Dialog</h4>
       </div>
-      <div class="modal-body" id="modalDialog">
-        
+      <div class="modal-body">
+        <ul></ul>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" id="modalSelectButton" class="btn btn-primary">Open this Folder</button>
+        <button type="button" id="modalSelectButton" data-dismiss="modal" class="btn btn-primary">Open this Folder</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
