Got it actually working
Needs some touchup and to be tested on Quickplans

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul></ul>
       </div>
       <div class="modal-footer">
-        <button type="button" id="modalSelectButton" data-dismiss="modal" class="btn btn-primary">Open this Folder</button>
+        <button type="button" data-dismiss="modal" class="btn btn-primary">Open this Folder</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
