index.html commenting

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body>
-  
+  <!-- itemMirror Selection modal -->
   <div class="modal fade" id="modalDialog">
   <div class="modal-dialog">
     <div class="modal-content">
