Upgraded Modal-Dialog
Soon to push these changes to Splash Screen.
Maybe have optional Icon View

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="styles/simpleDemo.css">
+  <link rel="stylesheet" type="text/css" href="styles/folderSelect.css">
     
   <script src="//cdnjs.cloudflare.com/ajax/libs/dropbox.js/0.10.2/dropbox.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
@@ -27,7 +28,7 @@
         <h4 class="modal-title">Modal itemMirror Folder Select Dialog</h4>
       </div>
       <div class="modal-body">
-        <ul></ul>
+        <div class="list-group"></div>
       </div>
       <div class="modal-footer">
         <button type="button" data-dismiss="modal" class="btn btn-primary">Open this Folder</button>
