apply changes to splash, complete list/icon toggle

--- a/splash.html
+++ b/splash.html
@@ -26,16 +26,26 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <h4 class="modal-title">Modal itemMirror Folder Select Dialog</h4>
+          <div style="float:right">
+            <div class="btn-group" data-toggle="buttons">
+              <label class="btn btn-primary active">
+                <input type="radio" name="folderSelectOptions" value="List" checked> <span class="glyphicon glyphicon-th-list"></span>
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="folderSelectOptions" value="Explorer"> <span class="glyphicon glyphicon-folder-open"></span>
+              </label>
+            </div>
+          </div>
       </div>
       <div class="modal-body">
-        <ul></ul>
+        <div class="list-group"></div>
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer" style="clear:left">
         <button type="button" data-dismiss="modal" class="btn btn-primary">Open this Folder</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-<!-- END itemMirror Selection modal -->
+  <!-- END itemMirror Selection modal -->
 </body>
 </html>
